# DMOLP

./: .gitignore  CMakeLists.txt  CMakeLists_backup.txt  CMakeLists_new.txt  LICENSE  README.md  build.sh  build_and_run_cpu.sh  build_cpu.sh  build_gpu.sh  dmolp_gpu  hostfile  hostfile_intel  hostfile_intel.reachable  install.sh  ljlogs.txt  log.txt  run.sh  run_hpc_partitioning.sh
.github/instructions/: DMOLP.instructions.md
Initial Partitioning/: bfs.cpp  bfs.hpp  hub.cpp  hub.hpp  load.cpp  load.hpp  main.cpp  partition.cpp  partition.hpp  seed.hpp  seed_greedy.cpp  seed_multiBFS.cpp  utils.cpp  utils.hpp
backup_files/: cuda_kernels_old.cu  main.cu  main_backup.cpp  main_clean.cpp  phase1.cu  phase1_clean.cu
build_cpu/: dmolp_cpu
build_gpu/: dmolp_gpu
dataset/: ljournal-2008.properties  uk-2014.properties  wget-log
docs/: 05_ghost_node_implementation_analysis.md  DMOLP_CUDA_분석보고서.md  DMOLP_기능명세서.md  DMOLP_논문발표_주제추천.md  DMOLP_알고리즘_흐름도.md  DMOLP_알고리즘_흐름도_.md  Jet_vs_DMOLP_고스트노드_비교분석.md
include/: cuda_kernels.h  graph_types.h  mpi_workflow.h  phase1.h  types.h  utils.hpp
include/phase1/: init.hpp  partition.hpp  phase1.h  random.hpp  seed.hpp
include/phase2/: gpu_lp_boundary.h  phase2.h
partitioning/: bfs.cpp  bfs.hpp  hub.hpp  load.cpp  load.hpp  main copy.cpp  partition.cpp  seed.hpp  tmp  utils.cpp  utils.hpp
phase2/: CMakeLists.txt  graph_types.h  main.cpp  phase1.cpp  phase1.h  report_utils.cpp  report_utils.h
phase2/include/: gpu_lp_boundary.h  graph_types.h  phase1.h  phase2.h  report_utils.h
phase2/src/: gpu_lp_boundary.cu  main.cpp  phase1 copy.cpp  phase1.cpp  phase2.cpp  report_utils.cpp
src/: algorithm_steps.cpp  convergence_ghost.cpp  cuda_kernels.cu  dmolp_distributed_workflow.cpp  label_propagation.cpp  main.cpp  main.cu  main_clean.cu  mpi_workflow.cpp  phase1.cpp  phase1.cu  phase1.h  phase1_clean.cpp  phase1_mock.cpp  results.cpp  utils.cpp
src/phase1/: bfs.cpp  init.cpp  partition copy.cpp  partition.cpp  phase1.cpp  random.cpp  seed.cpp  seed_greedy.cpp
src/phase2/: gpu_lp_boundary.cu  gpu_lp_boundary_thrust.cu  gpu_memory_optimized.cu  phase2.cpp
tool/: analyze.sh  convert.sh
